clusters/home/apps/rabbitmq/rabbitmq/configs/rabbitmq-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-ingressroute
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://rabbitmq.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Rabbitmq
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: rabbitmq.png
    gethomepage.dev/app: rabbitmq # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Rabbitmq
    #gethomepage.dev/widget.type: "rabbitmq"
    #gethomepage.dev/widget.url: "https://rabbitmq.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rabbitmq.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: rabbitmq
      port: 15672
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: rabbitmq-certificate-secret
